fix trait spacing and clean up some css, comment out monster part positioning

--- a/app/styles/base/_base.scss
+++ b/app/styles/base/_base.scss
@@ -6,7 +6,7 @@
 
 body{
   color: $black;
-  font-family: sans-serif;
+  font-family: 'Open Sans', sans-serif;
   background: $white;
 }
 
