--- a/app/styles/base/_helpers.scss
+++ b/app/styles/base/_helpers.scss
@@ -1,19 +1,12 @@
-// .top-container{
-//   border: 1px solid red;
-//   width: 500px;
-// }
-//
-// .main-container{
-//   display: flex;
-//   flex-flow: column wrap;
-//   align-items: center;
-// }
-//
-// .monster-mash{
-//   width: 200px;
-//   display: flex;
-//   flex-flow: column wrap;
-//   justify-content: center;
-//   align-items: center;
-//   border: 1px solid red;
-// }
+.top-container{
+  display: flex;
+  flex-flow: column wrap;
+  max-width: 350px;
+  padding: 25px;
+  border: 1px solid blue;
+}
+
+.button-container{
+  width: 100%;
+  height: 40px;
+}
