--- a/app/styles/components/_buttons.scss
+++ b/app/styles/components/_buttons.scss
@@ -1,4 +1,4 @@
-.button-one{
-  background: $viridian;
-  width: 300px;
-}
+// .button-one{
+//   background: $viridian;
+//   width: 300px;
+// }
