--- a/app/styles/layout/_traits.scss
+++ b/app/styles/layout/_traits.scss
@@ -1,5 +1,1 @@
-.trait-box{
-  display: flex;
-  flex-flow: column wrap;
-  border: 1px solid yellow;
-}
+
