--- a/app/styles/utils/_variables.scss
+++ b/app/styles/utils/_variables.scss
@@ -18,19 +18,19 @@ $footer-color: $light-grey;
 
 //Font Sizing
 
-$main-header: 3em;
-$secondary-header: 1.8em;
-$text-header: 1.5em;
+$main-header: 2.7em;
+$secondary-header: 1.2em;
+$text-header: 1.3em;
 
 //Borders
 
 //Spacers
 
-$container-margin: auto;
-$container-small-width: 85%;
-$container-medium-width: 80%;
-$container-max-width: 500px;
-$content-max-width: 500px;
+// $container-margin: auto;
+// $container-small-width: 85%;
+// $container-medium-width: 80%;
+// $container-max-width: 500px;
+// $content-max-width: 500px;
 
 //text adjustments
 $line-h: 20px;
